--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "sb": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "prepare": "husky",
-    "lint:staged": "lint-staged"
+    "lint:staged": "lint-staged",
+    "test": "vitest --run"
   },
   "dependencies": {
+    "@testing-library/react": "^14.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -27,6 +29,7 @@
     "@storybook/react": "^7.6.17",
     "@storybook/react-vite": "^7.6.17",
     "@storybook/test": "^7.6.17",
+    "@testing-library/user-event": "14.5.2",
     "@types/node": "20.11.24",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
@@ -38,6 +41,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-storybook": "^0.8.0",
+    "happy-dom": "13.6.2",
     "husky": "9.0.11",
     "lint-staged": "15.2.2",
     "postcss": "8.4.35",
@@ -45,7 +49,8 @@
     "tailwindcss": "3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.4",
-    "vite-tsconfig-paths": "4.3.1"
+    "vite-tsconfig-paths": "4.3.1",
+    "vitest": "1.3.1"
   },
   "lint-staged": {
     "*.{tsx,ts}": [
