--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   },
   "dependencies": {
     "@testing-library/react": "^14.2.1",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "2.2.1"
   },
   "devDependencies": {
     "@commitlint/cli": "19.0.3",
