--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
+
+      - name: Enable corepack so pnpm is able to use
+        run: corepack enable
+
       - name: Install dependencies
         run: pnpm i
 
