--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,8 +19,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
+      - name: Enable pnpm
+        run: corepack enable
       - uses: bitovi/github-actions-storybook-to-github-pages@v1.0.1
         with:
-          install_command: npm ci
-          build_command: npm run build-storybook
+          install_command: pnpm i
+          build_command: pnpm build-storybook
           path: storybook-static
